--- a/ucEmu.html
+++ b/ucEmu.html
@@ -146,17 +146,19 @@
 
                 fbSetColor(7);
                 fbClear();
-                fbSetColor(0);
-                rasterizerDrawTriangle(
+                fbSetColor( Math.round(Math.random() * 7) );
+                rasterizerDrawTriangleFilled(
                     round(interpolationLinear([trXYprev[0], trXY[0]], t1)), round(interpolationLinear([trXYprev[1], trXY[1]], t1)),
                     round(interpolationLinear([trXYprev[2], trXY[2]], t1)), round(interpolationLinear([trXYprev[3], trXY[3]], t1)),
                     round(interpolationLinear([trXYprev[4], trXY[4]], t1)), round(interpolationLinear([trXYprev[5], trXY[5]], t1))
                 );
-                rasterizerDrawTriangleFilled(
+                fbSetColor(0);
+                rasterizerDrawTriangle(
                         round(interpolationLinear([trXYprev[0], trXY[0]], t1)), round(interpolationLinear([trXYprev[1], trXY[1]], t1)),
                         round(interpolationLinear([trXYprev[2], trXY[2]], t1)), round(interpolationLinear([trXYprev[3], trXY[3]], t1)),
                         round(interpolationLinear([trXYprev[4], trXY[4]], t1)), round(interpolationLinear([trXYprev[5], trXY[5]], t1))
                 );
+                fbSetColor(0);
 
                 if (header !== "") {
                     rasterizerDrawText(round(0.5 * (fbWidth - header.length * 6) + sinMul(0.5 * fbWidth, t1)), round(0.5 * (fbHeight - 8)), header);
