--- a/ucEmu.html
+++ b/ucEmu.html
@@ -84,7 +84,7 @@
                 fbSetColor(0);
                 rasterizerDrawText(0, 0 * lineHeight, ' !"#$%&\'()*+,-./', fontSize);
                 rasterizerDrawText(0, 1 * lineHeight, '0123456789:;<=>?', fontSize);
-                rasterizerDrawText(0, 2 * lineHeight, '@ABCDEFGHIJKLMNO', fontSize)
+                rasterizerDrawText(0, 2 * lineHeight, '@ABCDEFGHIJKLMNO', fontSize);
                 rasterizerDrawText(0, 3 * lineHeight, 'PQRSTUVWXYZ[\\]^_', fontSize);
                 rasterizerDrawText(0, 4 * lineHeight, '`abcdefghjiklmno', fontSize);
                 rasterizerDrawText(0, 5 * lineHeight, 'pqrstuvwxyz{|}~ ', fontSize);
