minor update before going live

--- a/ucEmu.html
+++ b/ucEmu.html
@@ -235,7 +235,7 @@
                 if (demo === -1) {
                     demo = randomInt(0, 3);
                 }
-                demo = 1;
+                // demo = 1;
                 switch (demo) {
                     case 0:
                         demo0();
