--- a/ucEmu.html
+++ b/ucEmu.html
@@ -199,7 +199,7 @@
                     round(0.75 * fbWidth + sinMul(0.2 * fbWidth, 0.674 - t1)),
                     round(0.75 * fbHeight + sinMul(0.2 * fbHeight, 0.435 - t1))
                 );
-                rasterizerDrawText(round(sinMul(0.5 * fbWidth, t1)), 0, "ucEmu lib 2015");
+                rasterizerDrawText(round(sinMul(0.5 * fbWidth, t1)), 0, "ucEmu lib 2015-2016");
                 rasterizerDrawText(round(sinMul(0.1 * fbWidth, t1)), 10, text);
 
                 var state = "";
