adds memory controller, minor variables renames

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -11,6 +11,8 @@
         <script src="instruction-decoder/instruction-decoder.factory.js"></script>
         <script src="instruction-decoder/instruction-decoder-builder.service.js"></script>
         <script src="logger/logger.service.js"></script>
+        <script src="memory-controller/memory-controller.factory.js"></script>
+        <script src="memory-controller/memory-controller-builder.service.js"></script>
         <script src="microcode/microcode.service.js"></script>
         <script src="microcode/microcode-builder.service.js"></script>
         <script src="microcode/microcode-execute-add.factory.js"></script>
