Output handling refactored, cleanups, new ClockTick module

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -8,6 +8,8 @@
         <script src="bit-util/bit-util.service.js"></script>
         <script src="control-unit/control-unit.factory.js"></script>
         <script src="control-unit/control-unit-builder.service.js"></script>
+        <script src="clock-tick/clock-tick.factory.js"></script>
+        <script src="clock-tick/clock-tick-builder.service.js"></script>
         <script src="instruction-decoder/instruction-decoder.factory.js"></script>
         <script src="instruction-decoder/instruction-decoder-builder.service.js"></script>
         <script src="logger/logger.service.js"></script>
@@ -32,8 +34,8 @@
         <script src="microcode/microcode-fetch-first.factory.factory.js"></script>
         <script src="microcode/microcode-fetch-second-and-decode.factory.js"></script>
         <script src="opcode/opcode.service.js"></script>
-        <script src="register-set/register-file.factory.js"></script>
-        <script src="register-set/register-file-builder.service.js"></script>
+        <script src="register-file/register-file.factory.js"></script>
+        <script src="register-file/register-file-builder.service.js"></script>
         <script src="static-ram/static-ram.factory.js"></script>
 
         <script src="boot.js"></script>
