--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,22 +1,26 @@
 <html>
     <head>
+        <script src="simple-cpu-begin.js"></script>
+
+        <script src="logger/logger.service.js"></script>
+        <script src="microcode/microcode.service.js"></script>
+        <script src="opcode/opcode.service.js"></script>
+        <script src="bit-util/bit-util.service.js"></script>
         <script src="cpu/cpu-aware.factory.js"></script>
-        <script src="cpu/cpu.factory.js"></script>
-        <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
+        <script src="instruction-decoder/instruction-decoder.service.js"></script>
         <script src="alu/alu.factory.js"></script>
         <script src="alu/alu-builder.service.js"></script>
-        <script src="bit-util/bit-util.service.js"></script>
         <script src="control-unit/control-unit.factory.js"></script>
         <script src="control-unit/control-unit-builder.service.js"></script>
-        <script src="clock-tick/clock-tick.factory.js"></script>
-        <script src="clock-tick/clock-tick-builder.service.js"></script>
-        <script src="instruction-decoder/instruction-decoder.factory.js"></script>
-        <script src="instruction-decoder/instruction-decoder-builder.service.js"></script>
-        <script src="logger/logger.service.js"></script>
-        <script src="memory-controller/memory-controller.factory.js"></script>
+        <script src="clock-tick/clock-tick.service.js"></script>
+        <script src="register-file/register-file.factory.js"></script>
+        <script src="register-file/register-file-builder.service.js"></script>
+        <script src="memory-controller/memory-controller.service.js"></script>
         <script src="memory-controller/memory-controller-builder.service.js"></script>
-        <script src="microcode/microcode.service.js"></script>
+        <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
         <script src="microcode-handler/microcode-handler-builder.service.js"></script>
+        <script src="microcode-handler/00-microcode-handler-fetch-first.factory.factory.js"></script>
+        <script src="microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
         <script src="microcode-handler/02-microcode-handler-add.factory.js"></script>
         <script src="microcode-handler/06-microcode-handler-copy.factory.js"></script>
         <script src="microcode-handler/07-microcode-handler-imm.factory.js"></script>
@@ -31,14 +35,14 @@
         <script src="microcode-handler/13-microcode-handler-st-second-a.factory.js"></script>
         <script src="microcode-handler/14-microcode-handler-st-second-b.factory.js"></script>
         <script src="microcode-handler/15-microcode-handler-st-second-c.factory.js"></script>
-        <script src="microcode-handler/00-microcode-handler-fetch-first.factory.factory.js"></script>
-        <script src="microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
-        <script src="opcode/opcode.service.js"></script>
-        <script src="register-file/register-file.factory.js"></script>
-        <script src="register-file/register-file-builder.service.js"></script>
         <script src="static-ram/static-ram.factory.js"></script>
+        <script src="cpu/cpu.factory.js"></script>
 
-        <script src="boot.js"></script>
+        <script src="simple-cpu-begin.js"></script>
+
+        <!-- ----------- -->
+
+        <script src="hardware.js"></script>
     </head>
 
     <body style="font-family: monospace; font-size: 10px; line-height: 1.1em;">
