--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -6,17 +6,14 @@
         <script src="microcode/microcode.service.js"></script>
         <script src="opcode/opcode.service.js"></script>
         <script src="bit-util/bit-util.service.js"></script>
-        <script src="cpu/cpu-aware.factory.js"></script>
         <script src="instruction-decoder/instruction-decoder.service.js"></script>
-        <script src="alu/alu.factory.js"></script>
-        <script src="alu/alu-builder.service.js"></script>
+        <script src="alu/alu.service.js"></script>
         <script src="control-unit/control-unit.factory.js"></script>
         <script src="control-unit/control-unit-builder.service.js"></script>
         <script src="clock-tick/clock-tick.service.js"></script>
         <script src="register-file/register-file.factory.js"></script>
         <script src="register-file/register-file-builder.service.js"></script>
         <script src="memory-controller/memory-controller.service.js"></script>
-        <script src="memory-controller/memory-controller-builder.service.js"></script>
         <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
         <script src="microcode-handler/microcode-handler-builder.service.js"></script>
         <script src="microcode-handler/00-microcode-handler-fetch-first.factory.factory.js"></script>
