Write enable refactor, adds register bag

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -6,6 +6,7 @@
         <script src="microcode/microcode.service.js"></script>
         <script src="opcode/opcode.service.js"></script>
         <script src="bit-util/bit-util.service.js"></script>
+        <script src="bit-size/bit-size.service.js"></script>
         <script src="instruction-register-spliter/instruction-register-spliter.service.js"></script>
         <script src="instruction/abstract-instruction.factory.js"></script>
         <script src="instruction/instruction-builder.service.js"></script>
@@ -21,6 +22,8 @@
         <script src="control-unit/control-unit.factory.js"></script>
         <script src="control-unit/control-unit-builder.service.js"></script>
         <script src="clock-tick/clock-tick.service.js"></script>
+        <script src="register-bag/register-bag.factory.js"></script>
+        <script src="register-bag/register-bag-builder.service.js"></script>
         <script src="register-file/register-file.factory.js"></script>
         <script src="register-file/register-file-builder.service.js"></script>
         <script src="memory-controller/memory-controller.service.js"></script>
