--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -24,6 +24,8 @@
         <script src="clock-tick/clock-tick.service.js"></script>
         <script src="register-bag/register-bag.factory.js"></script>
         <script src="register-bag/register-bag-builder.service.js"></script>
+        <script src="input-bag/input-bag.factory.js"></script>
+        <script src="input-bag/input-bag-builder.service.js"></script>
         <script src="register-file/register-file.factory.js"></script>
         <script src="register-file/register-file-builder.service.js"></script>
         <script src="memory-controller/memory-controller.service.js"></script>
