Simulator cleanups - connection between StaticRam and CPU, logs

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -62,7 +62,9 @@
         <script src="hardware.js"></script>
     </head>
 
-    <body style="font-family: monospace; font-size: 10px; line-height: 1.1em;">
+    <body style="font-family: monospace; font-size: 10px; line-height: 1.1em;" onLoad="initialize()">
+
+        <div id="output" style="width: 715px;"></div>
 
     </body>
 </html>
