--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,70 +1,96 @@
-<html>
-    <head>
-        <script src="simple-cpu-begin.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <script src="simple-cpu-begin.js"></script>
 
-        <script src="logger/logger.service.js"></script>
-        <script src="microcode/microcode.service.js"></script>
-        <script src="opcode/opcode.service.js"></script>
-        <script src="bit-util/bit-util.service.js"></script>
-        <script src="bit-size/bit-size.service.js"></script>
-        <script src="instruction-register-spliter/instruction-register-spliter.service.js"></script>
-        <script src="instruction/abstract-instruction.factory.js"></script>
-        <script src="instruction/instruction-builder.service.js"></script>
-        <script src="instruction/00-instruction-add.factory.js"></script>
-        <script src="instruction/01-instruction-nand.factory.js"></script>
-        <script src="instruction/02-instruction-sh.factory.js"></script>
-        <script src="instruction/03-instruction-jnz.factory.js"></script>
-        <script src="instruction/04-instruction-copy.factory.js"></script>
-        <script src="instruction/05-instruction-imm.factory.js"></script>
-        <script src="instruction/06-instruction-ld.factory.js"></script>
-        <script src="instruction/07-instruction-st.factory.js"></script>
-        <script src="instruction/instruction-not-yet-decoded.factory.js"></script>
-        <script src="alu/alu.service.js"></script>
-        <script src="control-unit/control-unit.factory.js"></script>
-        <script src="control-unit/control-unit-builder.service.js"></script>
-        <script src="clock-tick/clock-tick.service.js"></script>
-        <script src="register-bag/register-bag.factory.js"></script>
-        <script src="register-bag/register-bag-builder.service.js"></script>
-        <script src="internal-result-bag/internal-result-bag.factory.js"></script>
-        <script src="internal-result-bag/internal-result-bag-builder.service.js"></script>
-        <script src="output-bag/output-bag.factory.js"></script>
-        <script src="output-bag/output-bag-builder.service.js"></script>
-        <script src="input-bag/input-bag.factory.js"></script>
-        <script src="input-bag/input-bag-builder.service.js"></script>
-        <script src="register-file/register-file.factory.js"></script>
-        <script src="register-file/register-file-builder.service.js"></script>
-        <script src="memory-controller/memory-controller.service.js"></script>
-        <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
-        <script src="microcode-handler/microcode-handler-builder.service.js"></script>
-        <script src="microcode-handler/00-microcode-handler-fetch-first.factory.js"></script>
-        <script src="microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
-        <script src="microcode-handler/02-microcode-handler-add.factory.js"></script>
-        <script src="microcode-handler/06-microcode-handler-copy.factory.js"></script>
-        <script src="microcode-handler/07-microcode-handler-imm.factory.js"></script>
-        <script src="microcode-handler/05-microcode-handler-jnz.factory.js"></script>
-        <script src="microcode-handler/08-microcode-handler-ld-first.factory.js"></script>
-        <script src="microcode-handler/09-microcode-handler-ld-second.factory.js"></script>
-        <script src="microcode-handler/03-microcode-handler-nand.factory.js"></script>
-        <script src="microcode-handler/04-microcode-handler-sh.factory.js"></script>
-        <script src="microcode-handler/10-microcode-handler-st-first-a.factory.js"></script>
-        <script src="microcode-handler/11-microcode-handler-st-first-b.factory.js"></script>
-        <script src="microcode-handler/12-microcode-handler-st-first-c.factory.js"></script>
-        <script src="microcode-handler/13-microcode-handler-st-second-a.factory.js"></script>
-        <script src="microcode-handler/14-microcode-handler-st-second-b.factory.js"></script>
-        <script src="microcode-handler/15-microcode-handler-st-second-c.factory.js"></script>
-        <script src="static-ram/static-ram.factory.js"></script>
-        <script src="cpu/cpu.factory.js"></script>
+    <script src="logger/logger.service.js"></script>
+    <script src="microcode/microcode.service.js"></script>
+    <script src="opcode/opcode.service.js"></script>
+    <script src="bit-util/bit-util.service.js"></script>
+    <script src="bit-size/bit-size.service.js"></script>
+    <script src="instruction-register-spliter/instruction-register-spliter.service.js"></script>
+    <script src="instruction/abstract-instruction.factory.js"></script>
+    <script src="instruction/instruction-builder.service.js"></script>
+    <script src="instruction/00-instruction-add.factory.js"></script>
+    <script src="instruction/01-instruction-nand.factory.js"></script>
+    <script src="instruction/02-instruction-sh.factory.js"></script>
+    <script src="instruction/03-instruction-jz.factory.js"></script>
+    <script src="instruction/04-instruction-copy.factory.js"></script>
+    <script src="instruction/05-instruction-imm.factory.js"></script>
+    <script src="instruction/06-instruction-ld.factory.js"></script>
+    <script src="instruction/07-instruction-st.factory.js"></script>
+    <script src="instruction/instruction-not-yet-decoded.factory.js"></script>
+    <script src="alu/alu.service.js"></script>
+    <script src="control-unit/control-unit.factory.js"></script>
+    <script src="control-unit/control-unit-builder.service.js"></script>
+    <script src="clock-tick/clock-tick.service.js"></script>
+    <script src="register-bag/register-bag.factory.js"></script>
+    <script src="register-bag/register-bag-builder.service.js"></script>
+    <script src="internal-result-bag/internal-result-bag.factory.js"></script>
+    <script src="internal-result-bag/internal-result-bag-builder.service.js"></script>
+    <script src="output-bag/output-bag.factory.js"></script>
+    <script src="output-bag/output-bag-builder.service.js"></script>
+    <script src="input-bag/input-bag.factory.js"></script>
+    <script src="input-bag/input-bag-builder.service.js"></script>
+    <script src="register-file/register-file.factory.js"></script>
+    <script src="register-file/register-file-builder.service.js"></script>
+    <script src="memory-controller/memory-controller.service.js"></script>
+    <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
+    <script src="microcode-handler/microcode-handler-builder.service.js"></script>
+    <script src="microcode-handler/00-microcode-handler-fetch-first.factory.js"></script>
+    <script src="microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
+    <script src="microcode-handler/02-microcode-handler-add.factory.js"></script>
+    <script src="microcode-handler/06-microcode-handler-copy.factory.js"></script>
+    <script src="microcode-handler/07-microcode-handler-imm.factory.js"></script>
+    <script src="microcode-handler/05-microcode-handler-jz.factory.js"></script>
+    <script src="microcode-handler/08-microcode-handler-ld-first.factory.js"></script>
+    <script src="microcode-handler/09-microcode-handler-ld-second.factory.js"></script>
+    <script src="microcode-handler/03-microcode-handler-nand.factory.js"></script>
+    <script src="microcode-handler/04-microcode-handler-sh.factory.js"></script>
+    <script src="microcode-handler/10-microcode-handler-st-first-a.factory.js"></script>
+    <script src="microcode-handler/11-microcode-handler-st-first-b.factory.js"></script>
+    <script src="microcode-handler/12-microcode-handler-st-first-c.factory.js"></script>
+    <script src="microcode-handler/13-microcode-handler-st-second-a.factory.js"></script>
+    <script src="microcode-handler/14-microcode-handler-st-second-b.factory.js"></script>
+    <script src="microcode-handler/15-microcode-handler-st-second-c.factory.js"></script>
+    <script src="static-ram/static-ram.factory.js"></script>
+    <script src="cpu/cpu.factory.js"></script>
 
-        <script src="simple-cpu-begin.js"></script>
+    <script src="simple-cpu-begin.js"></script>
 
-        <!-- ----------- -->
+    <!-- ----------- -->
 
-        <script src="hardware.js"></script>
-    </head>
+    <script src="hardware.js"></script>
 
-    <body style="font-family: monospace; font-size: 10px; line-height: 1.1em;" onLoad="initialize()">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 
-        <div id="output" style="width: 715px;"></div>
+<body style="font-family: 'Consolas'; font-size: 10px; line-height: 1.1em; min-width: 705px;">
 
-    </body>
+    <pre>
+00 | add     regOut, regIn0, regIn1  | regOut = regIn0 + regIn1
+01 | nand    regOut, regIn0, regIn1  | regOut = regIn0 nand regIn1
+02 | sh      regOut, regIn0, regIn1  | regOut = (regIn1 >= 0) ? (regIn0 << regIn1) : (regIn0 >>> abs(regIn1))
+03 | jz              regIn0, regIn1  | if (regIn1 == 0) jump to address from regIn0
+04 | copy    regOut, regIn0          | regOut = regIn0
+05 | imm     regOut, _constant16bit_ | regOut = _constant16bit_
+06 | ld      regOut, regIn0          | regOut = MemoryAt[regIn0]
+07 | st              regIn0, regIn1  | MemoryAt[regIn0] = regIn1
+    </pre>
+
+    Row 00 00: <input id="input-0" type="text" value="00 00 00 00"/><br/>
+    Row 00 01: <input id="input-1" type="text" value="00 00 00 00"/><br/>
+    Row 00 02: <input id="input-2" type="text" value="00 00 00 00"/><br/>
+    Row 00 03: <input id="input-3" type="text" value="00 00 00 00"/><br/>
+    Row 00 04: <input id="input-4" type="text" value="00 00 00 00"/><br/>
+    Row 00 05: <input id="input-5" type="text" value="00 00 00 00"/><br/>
+    <input id="use-input" type="checkbox" value="1"/>
+    <input id="full-log" type="checkbox" value="1"/>
+
+    <button onClick="initialize()">Initialize and run</button>
+
+    <div id="output"></div>
+
+</body>
 </html>
