--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -66,7 +66,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
-<body style="font-family: 'Consolas'; font-size: 10px; line-height: 1.1em; min-width: 705px;">
+<body style="font-family: 'Consolas'; font-size: 12px; line-height: 1.05em; text-rendering: optimizeLegibility; min-width: 855px;">
 
     <pre>
 00 | add     regOut, regIn0, regIn1  | regOut = regIn0 + regIn1
@@ -79,14 +79,14 @@
 07 | st              regIn0, regIn1  | MemoryAt[regIn0] = regIn1
     </pre>
 
-    Row 00 00: <input id="input-0" type="text" value="00 00 00 00"/><br/>
-    Row 00 01: <input id="input-1" type="text" value="00 00 00 00"/><br/>
-    Row 00 02: <input id="input-2" type="text" value="00 00 00 00"/><br/>
-    Row 00 03: <input id="input-3" type="text" value="00 00 00 00"/><br/>
-    Row 00 04: <input id="input-4" type="text" value="00 00 00 00"/><br/>
-    Row 00 05: <input id="input-5" type="text" value="00 00 00 00"/><br/>
-    <input id="use-input" type="checkbox" value="1"/>
-    <input id="full-log" type="checkbox" value="1"/>
+    Address 00 | RowAddress 00 <input id="input-0" type="text" value="00 00 00 00"/><br/>
+    Address 04 | RowAddress 01 <input id="input-1" type="text" value="00 00 00 00"/><br/>
+    Address 08 | RowAddress 02 <input id="input-2" type="text" value="00 00 00 00"/><br/>
+    Address 0c | RowAddress 03 <input id="input-3" type="text" value="00 00 00 00"/><br/>
+    Address 10 | RowAddress 04 <input id="input-4" type="text" value="00 00 00 00"/><br/>
+    Address 14 | RowAddress 05 <input id="input-5" type="text" value="00 00 00 00"/><br/>
+    UI: <input id="use-input" type="checkbox" value="1"/>
+    FL: <input id="full-log" type="checkbox" value="1"/>
 
     <button onClick="initialize()">Initialize and run</button>
 
