improve performance by spiting 'propagate' method into two methods

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -66,7 +66,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
-<body style="font-family: 'Consolas'; font-size: 12px; line-height: 1.05em; text-rendering: optimizeLegibility; min-width: 855px;">
+<body style="font-family: 'Courier New'; font-size: 12px; line-height: 1.05em; text-rendering: optimizeLegibility; min-width: 905px;">
 
     <pre>
 00 | add     regOut, regIn0, regIn1  | regOut = regIn0 + regIn1
