--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -4,58 +4,58 @@
     <meta charset="UTF-8">
     <script src="simple-cpu-begin.js"></script>
 
-    <script src="logger/logger.service.js"></script>
-    <script src="microcode/microcode.service.js"></script>
-    <script src="opcode/opcode.service.js"></script>
-    <script src="bit-util/bit-util.service.js"></script>
-    <script src="bit-size/bit-size.service.js"></script>
-    <script src="instruction-register-spliter/instruction-register-spliter.service.js"></script>
-    <script src="instruction/abstract-instruction.factory.js"></script>
-    <script src="instruction/instruction-builder.service.js"></script>
-    <script src="instruction/00-instruction-add.factory.js"></script>
-    <script src="instruction/01-instruction-nand.factory.js"></script>
-    <script src="instruction/02-instruction-sh.factory.js"></script>
-    <script src="instruction/03-instruction-jz.factory.js"></script>
-    <script src="instruction/04-instruction-copy.factory.js"></script>
-    <script src="instruction/05-instruction-imm.factory.js"></script>
-    <script src="instruction/06-instruction-ld.factory.js"></script>
-    <script src="instruction/07-instruction-st.factory.js"></script>
-    <script src="instruction/instruction-not-yet-decoded.factory.js"></script>
-    <script src="alu/alu.service.js"></script>
-    <script src="control-unit/control-unit.factory.js"></script>
-    <script src="control-unit/control-unit-builder.service.js"></script>
-    <script src="clock-tick/clock-tick.service.js"></script>
-    <script src="register-bag/register-bag.factory.js"></script>
-    <script src="register-bag/register-bag-builder.service.js"></script>
-    <script src="internal-result-bag/internal-result-bag.factory.js"></script>
-    <script src="internal-result-bag/internal-result-bag-builder.service.js"></script>
-    <script src="output-bag/output-bag.factory.js"></script>
-    <script src="output-bag/output-bag-builder.service.js"></script>
-    <script src="input-bag/input-bag.factory.js"></script>
-    <script src="input-bag/input-bag-builder.service.js"></script>
-    <script src="register-file/register-file.factory.js"></script>
-    <script src="register-file/register-file-builder.service.js"></script>
-    <script src="memory-controller/memory-controller.service.js"></script>
-    <script src="microcode-handler/abstract-microcode-handler.factory.js"></script>
-    <script src="microcode-handler/microcode-handler-builder.service.js"></script>
-    <script src="microcode-handler/00-microcode-handler-fetch-first.factory.js"></script>
-    <script src="microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
-    <script src="microcode-handler/02-microcode-handler-add.factory.js"></script>
-    <script src="microcode-handler/06-microcode-handler-copy.factory.js"></script>
-    <script src="microcode-handler/07-microcode-handler-imm.factory.js"></script>
-    <script src="microcode-handler/05-microcode-handler-jz.factory.js"></script>
-    <script src="microcode-handler/08-microcode-handler-ld-first.factory.js"></script>
-    <script src="microcode-handler/09-microcode-handler-ld-second.factory.js"></script>
-    <script src="microcode-handler/03-microcode-handler-nand.factory.js"></script>
-    <script src="microcode-handler/04-microcode-handler-sh.factory.js"></script>
-    <script src="microcode-handler/10-microcode-handler-st-first-a.factory.js"></script>
-    <script src="microcode-handler/11-microcode-handler-st-first-b.factory.js"></script>
-    <script src="microcode-handler/12-microcode-handler-st-first-c.factory.js"></script>
-    <script src="microcode-handler/13-microcode-handler-st-second-a.factory.js"></script>
-    <script src="microcode-handler/14-microcode-handler-st-second-b.factory.js"></script>
-    <script src="microcode-handler/15-microcode-handler-st-second-c.factory.js"></script>
-    <script src="static-ram/static-ram.factory.js"></script>
-    <script src="cpu/cpu.factory.js"></script>
+    <script src="src/tool/logger/logger.service.js"></script>
+    <script src="src/control-unit/microcode/microcode.service.js"></script>
+    <script src="src/control-unit/opcode/opcode.service.js"></script>
+    <script src="src/tool/bit-util/bit-util.service.js"></script>
+    <script src="src/cpu-bit-size.service.js"></script>
+    <script src="src/combinational-logic/instruction-register-spliter/instruction-register-spliter.service.js"></script>
+    <script src="src/control-unit/instruction/abstract-instruction.factory.js"></script>
+    <script src="src/control-unit/instruction/instruction-builder.service.js"></script>
+    <script src="src/control-unit/instruction/00-instruction-add.factory.js"></script>
+    <script src="src/control-unit/instruction/01-instruction-nand.factory.js"></script>
+    <script src="src/control-unit/instruction/02-instruction-sh.factory.js"></script>
+    <script src="src/control-unit/instruction/03-instruction-jz.factory.js"></script>
+    <script src="src/control-unit/instruction/04-instruction-copy.factory.js"></script>
+    <script src="src/control-unit/instruction/05-instruction-imm.factory.js"></script>
+    <script src="src/control-unit/instruction/06-instruction-ld.factory.js"></script>
+    <script src="src/control-unit/instruction/07-instruction-st.factory.js"></script>
+    <script src="src/control-unit/instruction/instruction-not-yet-decoded.factory.js"></script>
+    <script src="src/combinational-logic/alu/alu.service.js"></script>
+    <script src="src/control-unit/control-unit.factory.js"></script>
+    <script src="src/control-unit/control-unit-builder.service.js"></script>
+    <script src="src/combinational-logic/clock-tick/clock-tick.service.js"></script>
+    <script src="src/storage/register-bag/register-bag.factory.js"></script>
+    <script src="src/storage/register-bag/register-bag-builder.service.js"></script>
+    <script src="src/data-bag/internal-result-bag/internal-result-bag.factory.js"></script>
+    <script src="src/data-bag/internal-result-bag/internal-result-bag-builder.service.js"></script>
+    <script src="src/data-bag/output-bag/output-bag.factory.js"></script>
+    <script src="src/data-bag/output-bag/output-bag-builder.service.js"></script>
+    <script src="src/data-bag/input-bag/input-bag.factory.js"></script>
+    <script src="src/data-bag/input-bag/input-bag-builder.service.js"></script>
+    <script src="src/storage/register-file/register-file.factory.js"></script>
+    <script src="src/storage/register-file/register-file-builder.service.js"></script>
+    <script src="src/combinational-logic/memory-controller/memory-controller.service.js"></script>
+    <script src="src/control-unit/microcode-handler/abstract-microcode-handler.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/microcode-handler-builder.service.js"></script>
+    <script src="src/control-unit/microcode-handler/00-microcode-handler-fetch-first.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/01-microcode-handler-fetch-second-and-decode.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/02-microcode-handler-add.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/06-microcode-handler-copy.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/07-microcode-handler-imm.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/05-microcode-handler-jz.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/08-microcode-handler-ld-first.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/09-microcode-handler-ld-second.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/03-microcode-handler-nand.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/04-microcode-handler-sh.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/10-microcode-handler-st-first-a.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/11-microcode-handler-st-first-b.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/12-microcode-handler-st-first-c.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/13-microcode-handler-st-second-a.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/14-microcode-handler-st-second-b.factory.js"></script>
+    <script src="src/control-unit/microcode-handler/15-microcode-handler-st-second-c.factory.js"></script>
+    <script src="src/storage/static-ram/static-ram.factory.js"></script>
+    <script src="src/cpu.factory.js"></script>
 
     <script src="simple-cpu-begin.js"></script>
 
