simple program assembled - first tests

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -88,7 +88,9 @@
     UI: <input id="use-input" type="checkbox" value="1"/>
     FL: <input id="full-log" type="checkbox" value="1"/>
 
-    <button onClick="initialize()">Initialize and run</button>
+    <button onClick="initialize()">Initialize</button>
+    <button onClick="runAuto()">Run auto</button>
+    <button onClick="runStepByStep()">Run step by step</button>
 
     <div id="output"></div>
 
