--- a/ucEmu/hardware/index.html
+++ b/ucEmu/hardware/index.html
@@ -61,7 +61,7 @@
 
     <!-- ----------- -->
 
-    <script src="hardware.js"></script>
+    <script src="index.js"></script>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
