Store instruction - part 1

--- a/ucEmu/hardware/index.html
+++ b/ucEmu/hardware/index.html
@@ -79,11 +79,11 @@
 07 | st              regIn0, regIn1  | MemoryAt[regIn0] = regIn1
     </pre>
 
-    Address 00 | RowAddress 00 <input id="input-0" type="text" value="00 00 00 00"/><br/>
-    Address 04 | RowAddress 01 <input id="input-1" type="text" value="00 00 00 00"/><br/>
-    Address 08 | RowAddress 02 <input id="input-2" type="text" value="00 00 00 00"/><br/>
-    Address 0c | RowAddress 03 <input id="input-3" type="text" value="00 00 00 00"/><br/>
-    Address 10 | RowAddress 04 <input id="input-4" type="text" value="00 00 00 00"/><br/>
+    Address 00 | RowAddress 00 <input id="input-0" type="text" value="50 ab cd 51"/><br/>
+    Address 04 | RowAddress 01 <input id="input-1" type="text" value="00 0c 70 10"/><br/>
+    Address 08 | RowAddress 02 <input id="input-2" type="text" value="5f 00 08 00"/><br/>
+    Address 0c | RowAddress 03 <input id="input-3" type="text" value="12 34 56 78"/><br/>
+    Address 10 | RowAddress 04 <input id="input-4" type="text" value="9a bc de f0"/><br/>
     Address 14 | RowAddress 05 <input id="input-5" type="text" value="00 00 00 00"/><br/>
     UI: <input id="use-input" type="checkbox" value="1"/>
     FL: <input id="full-log" type="checkbox" value="1"/>
